Activity 2 - Personal Information Update (Cont'd)

--- a/index.html
+++ b/index.html
@@ -313,14 +313,14 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.ontario.ca/page/ministry-public-and-business-service-delivery-and-procurement" target="_blank"><img alt="Government of Ontario (MPBSDP)"
+                <a href="https://www.ontario.ca/page/ministry-public-and-business-service-delivery-and-procurement" target="_blank"><img alt="Government of Ontario"
                     src="/assets/img/ontario_logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.ontario.ca/page/ministry-public-and-business-service-delivery-and-procurement" target="_blank"
-                      class="teal-text hoverline">Ministry of Public and Business Service Delivery and Procurement</a></span>
+                      class="teal-text hoverline">Ontario Public Service</a></span>
                 </p>
               </div>
             </div>
