--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
               </div>
-              <div>
+              <!--div>
                 <img alt="" src="/assets/img/docker_logo.jpg" class="responsive-img" />Docker
-              </div>
+              </div>-->
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
               </div>
