Activity 3 - Update index.html and style.css to reflect purple colour

--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark purple-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark purple-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
 
       <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark purple-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
 
@@ -115,7 +115,7 @@
         mdi-social-poll
         mdi-av-equalizer
         -->
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
       
@@ -123,7 +123,7 @@
         <!--
         ICONS:
         -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark purple-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
 
@@ -133,7 +133,7 @@
         2. mdi-content-mail
         3. mdi-communication-email
         -->
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark purple-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
@@ -150,7 +150,7 @@
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Anson's resume in a new tab" href="https://denotable.github.io/assets/resume/Anson Sun_Resume.pdf" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        class="waves-effect waves-dark purple-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
   </nav>
@@ -160,7 +160,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Anson
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="purple-text">Anson
         Sun</a><span class="black-text">Computer Engineering Student</span>
     </div>
   </nav>
@@ -169,35 +169,35 @@
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark purple-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark purple-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark purple-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark purple-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark purple-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Anson's Resume in a new tab"
           href="https://denotable.github.io/assets/resume/Anson Sun_Resume.pdf" target="_blank"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+          class="waves-effect waves-dark purple-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
   </nav>
@@ -211,7 +211,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Anson Sun.</span></h2>
+              <h2>Hi, I'm <span class="purple">Anson Sun.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Computer Engineering student at the University of Toronto.</h5>
@@ -253,7 +253,7 @@
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+      <h3 class="page-title white-text purple">About</h3>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
@@ -305,7 +305,7 @@
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+      <h3 class="page-title white-text purple">Experience</h3>
       <div class="container">
 
         <!-- Latest Experience -->
@@ -320,7 +320,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.ontario.ca/page/ministry-public-and-business-service-delivery-and-procurement" target="_blank"
-                      class="teal-text hoverline">Ontario Public Service</a></span>
+                      class="purple-text hoverline">Ontario Public Service</a></span>
                 </p>
               </div>
             </div>
@@ -350,7 +350,7 @@
 
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Projects</h3>
+      <h3 class="page-title white-text purple">Projects</h3>
       <div class="container">
         <div class="row">
 
@@ -360,7 +360,7 @@
                 <img alt="NextPersona App Page" src="/assets/img/NextPersona_In_Action.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator purple-text hoverline">Music Player Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   NextPersona AI Chat Web App
@@ -399,7 +399,7 @@
                 <img alt="quiz app" src="/assets/img/ALPR_Main.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Quiz Web-App<i
+                <span class="card-title activator purple-text hoverline">Quiz Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Automatic License Plate Recognition (ALPR) System
@@ -474,7 +474,7 @@
                 <img alt="Screenshot of web app" src="/assets/img/ScenicExplorer_Main.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">ScenicExplorer<i
+                <span class="card-title activator purple-text hoverline">ScenicExplorer<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A navigation-enabled comprehensive map application.
@@ -483,7 +483,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title teal-text"><small>Accomplishments</small><i
+                <span class="card-title purple-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li>Incorporated A* Algorithm and Ant Colony Optimization for optimal path finding.</li>
@@ -507,7 +507,7 @@
                 <img alt="Screenshot of web app" src="/assets/img/FPGA_Clarinet_Simulator_Start.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Clarinet Simulator<i
+                <span class="card-title activator purple-text hoverline">Clarinet Simulator<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A FPGA-based functional clarinet simulator.
@@ -537,7 +537,7 @@
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
-      <h3 class="page-title white-text teal">Skills</h3>
+      <h3 class="page-title white-text purple">Skills</h3>
       <div class="container">
         <!-- Languages and Databases -->
         <div class="card">
@@ -661,7 +661,7 @@
 
     <!-- Seventh Section: Education -->
     <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
+      <h3 class="page-title white-text purple">Education</h3>
       <div class="container">
         <div class="row">
           <!-- Education -->
@@ -669,7 +669,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="purple-text hoverline">University of Toronto</a></span>
                 </p>
                 <p class="brown-text">Toronto, Ontario</p>
                 <p>
@@ -700,7 +700,7 @@
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
-      <h3 class="page-title white-text teal">Contact</h3>
+      <h3 class="page-title white-text purple">Contact</h3>
       <div class="container">
         <p>
           <a aria-label="Call Anson" data-position="top" data-tooltip="Call Anson"
