Activity 4 - Add Places Travelled section in index.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
       </li>
 
       <li class="bold">
+        <!--
+        ICONS:
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#places-travelled" class="waves-effect waves-dark purple-text"><i
+            class="mdi-social-school small"></i><span>Places Travelled</span></a>
+      </li>
+
+      <li class="bold">
         <!-- 
         1. mdi-communication-contacts
         2. mdi-content-mail
@@ -189,6 +197,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark purple-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Education section" href="#places-travelled" class="waves-effect waves-dark purple-text"><i
+            class="mdi-social-school small"></i><span>Places Travelled</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark purple-text"><i
@@ -698,7 +710,15 @@
       </div>
     </section>
 
-    <!-- Eight Section: Contact -->
+    <!-- Eighth Section: Places Travelled -->
+    <section id="places-travelled" class="section scrollspy full-height">
+      <h3 class="page-title white-text purple">Places Travelled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/embed?mid=1V_3pwNg8IZkjXg4VnLH2FI0hBd6isLw&ehbc=2E312F" width="640" height="480"></iframe>
+      </div>
+    </section>
+
+    <!-- Ninth Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text purple">Contact</h3>
       <div class="container">
