--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     <section id="places-travelled" class="section scrollspy full-height">
       <h3 class="page-title white-text purple">Places Travelled</h3>
       <div class="container">
-        <iframe src="https://www.google.com/maps/d/embed?mid=1V_3pwNg8IZkjXg4VnLH2FI0hBd6isLw&ehbc=2E312F" width="640" height="480"></iframe>
+        <iframe class="map-iframe" src="https://www.google.com/maps/d/embed?mid=1V_3pwNg8IZkjXg4VnLH2FI0hBd6isLw&ehbc=2E312F" width="640" height="480"></iframe>
       </div>
     </section>
 
