Activity 4 - Make embedded map centered in index.html

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     <!-- Eighth Section: Places Travelled -->
     <section id="places-travelled" class="section scrollspy full-height">
       <h3 class="page-title white-text purple">Places Travelled</h3>
-      <div class="container">
+      <div class="container" style="display:flex; justify-content:center;">
         <iframe class="map-iframe" src="https://www.google.com/maps/d/embed?mid=1V_3pwNg8IZkjXg4VnLH2FI0hBd6isLw&ehbc=2E312F" width="640" height="480"></iframe>
       </div>
     </section>
