Activity 5 - Update projects text styling

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <section id="projects" class="section scrollspy">
       <h3 class="page-title white-text purple">Projects</h3>
       <!-- Recent Projects Rendering (JS) -->
-      <h4 class="brown-text light" style="margin-top:0">Recent Projects</h4>
+      <h4 class="brown-text light" style="margin-top:0; text-align:center;">Recent Projects</h4>
 
       <div id="recent-projects" class="row" aria-live="polite">
         <noscript>Please enable JavaScript to view recent projects.</noscript>
@@ -376,7 +376,9 @@
         <button id="load-more-projects" class="btn waves-effect purple">Load More</button>
       </div>
 
+      <!-- All projects -->
       <div class="container">
+        <h4 class="brown-text light" style="margin-top:0; text-align:center;">All Projects</h4>
         <div class="row">
           
           <!-- NextPersona-->
