Activity 5 - Update Project section button padding in index.html

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         <noscript>Please enable JavaScript to view recent projects.</noscript>
       </div>
 
-      <div class="center-align" style="margin-top: 12px;">
+      <div class="center-align" style="margin-top: 12px; margin-bottom:16px">
         <button id="load-more-projects" class="btn waves-effect purple">Load More</button>
       </div>
 
